libcimgui/generator_output/cimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef struct ImVector_ImDrawCmd_t ImVector_ImDrawCmd;
typedef struct ImVector_ImDrawIdx_t ImVector_ImDrawIdx;
typedef struct ImVector_ImDrawChannel_t ImVector_ImDrawChannel;
typedef struct ImVector_ImDrawVert_t ImVector_ImDrawVert;
typedef struct ImVector_ImVec4_t ImVector_ImVec4;
typedef struct ImVector_ImTextureID_t ImVector_ImTextureID;
typedef struct ImVector_ImVec2_t ImVector_ImVec2;
typedef struct ImVector_ImDrawListPtr_t ImVector_ImDrawListPtr;
typedef struct ImDrawCmdHeader_t ImDrawCmdHeader;
typedef struct ImDrawChannel_t ImDrawChannel;                            
typedef struct ImDrawCmd_t ImDrawCmd;                                    
typedef struct ImDrawData_t ImDrawData;                                  
typedef struct ImDrawList_t ImDrawList;                                  
typedef struct ImDrawListSharedData_t ImDrawListSharedData;              
typedef struct ImDrawListSplitter_t ImDrawListSplitter;                  
typedef struct ImDrawVert_t ImDrawVert;                                  
typedef struct ImGuiViewport_t ImGuiViewport;                            
typedef int ImDrawListFlags;        
typedef int ImGuiViewportFlags;     
typedef void* ImTextureID;  
typedef unsigned short ImDrawIdx;  
typedef unsigned int ImGuiID;      
typedef unsigned int ImU32;        
IM_MSVC_RUNTIME_CHECKS_OFF
typedef struct ImVec2_t
{
    float x, y;
} ImVec2;
typedef struct ImVec4_t
{
    float x, y, z, w;
} ImVec4;
typedef struct ImVector_ImDrawCmd_t
{
    int        Size;
    int        Capacity;
    ImDrawCmd* Data;
} ImVector_ImDrawCmd;
typedef struct ImVector_ImDrawIdx_t
{
    int        Size;
    int        Capacity;
    ImDrawIdx* Data;
} ImVector_ImDrawIdx;
typedef struct ImVector_ImDrawChannel_t
{
    int            Size;
    int            Capacity;
    ImDrawChannel* Data;
} ImVector_ImDrawChannel;
typedef struct ImVector_ImDrawVert_t
{
    int         Size;
    int         Capacity;
    ImDrawVert* Data;
} ImVector_ImDrawVert;
typedef struct ImVector_ImVec4_t
{
    int     Size;
    int     Capacity;
    ImVec4* Data;
} ImVector_ImVec4;
typedef struct ImVector_ImTextureID_t
{
    int          Size;
    int          Capacity;
    ImTextureID* Data;
} ImVector_ImTextureID;
typedef struct ImVector_ImVec2_t
{
    int     Size;
    int     Capacity;
    ImVec2* Data;
} ImVector_ImVec2;
typedef struct ImVector_ImDrawListPtr_t
{
    int          Size;
    int          Capacity;
    ImDrawList** Data;
} ImVector_ImDrawListPtr;
typedef void (*ImDrawCallback)(const ImDrawList* parent_list, const ImDrawCmd* cmd);
typedef struct ImDrawCmd_t
{
    ImVec4         ClipRect;          
    ImTextureID    TextureId;         
    unsigned int   VtxOffset;         
    unsigned int   IdxOffset;         
    unsigned int   ElemCount;         
    ImDrawCallback UserCallback;      
    void*          UserCallbackData;  
} ImDrawCmd;
typedef struct ImDrawVert_t
{
    ImVec2 pos;
    ImVec2 uv;
    ImU32  col;
} ImDrawVert;
typedef struct ImDrawCmdHeader_t
{
    ImVec4       ClipRect;
    ImTextureID  TextureId;
    unsigned int VtxOffset;
} ImDrawCmdHeader;
typedef struct ImDrawChannel_t
{
    ImVector_ImDrawCmd _CmdBuffer;
    ImVector_ImDrawIdx _IdxBuffer;
} ImDrawChannel;
typedef struct ImDrawListSplitter_t
{
    int                    _Current;   
    int                    _Count;     
    ImVector_ImDrawChannel _Channels;  
} ImDrawListSplitter;
typedef struct ImDrawList_t
{
    ImVector_ImDrawCmd    CmdBuffer;        
    ImVector_ImDrawIdx    IdxBuffer;        
    ImVector_ImDrawVert   VtxBuffer;        
    ImDrawListFlags       Flags;            
    unsigned int          _VtxCurrentIdx;   
    ImDrawListSharedData* _Data;            
    const char*           _OwnerName;       
    ImDrawVert*           _VtxWritePtr;     
    ImDrawIdx*            _IdxWritePtr;     
    ImVector_ImVec4       _ClipRectStack;   
    ImVector_ImTextureID  _TextureIdStack;  
    ImVector_ImVec2       _Path;            
    ImDrawCmdHeader       _CmdHeader;       
    ImDrawListSplitter    _Splitter;        
    float                 _FringeScale;     
} ImDrawList;
typedef struct ImDrawData_t
{
    bool                   Valid;             
    int                    CmdListsCount;     
    int                    TotalIdxCount;     
    int                    TotalVtxCount;     
    ImVector_ImDrawListPtr CmdLists;          
    ImVec2                 DisplayPos;        
    ImVec2                 DisplaySize;       
    ImVec2                 FramebufferScale;  
    ImGuiViewport*         OwnerViewport;     
} ImDrawData;
typedef struct ImGuiViewport_t
{
    ImGuiID            ID;                     
    ImGuiViewportFlags Flags;                  
    ImVec2             Pos;                    
    ImVec2             Size;                   
    ImVec2             WorkPos;                
    ImVec2             WorkSize;               
    float              DpiScale;               
    ImGuiID            ParentViewportId;       
    ImDrawData*        DrawData;               
    void*              RendererUserData;       
    void*              PlatformUserData;       
    void*              PlatformHandle;         
    void*              PlatformHandleRaw;      
    bool               PlatformWindowCreated;  
    bool               PlatformRequestMove;    
    bool               PlatformRequestResize;  
    bool               PlatformRequestClose;   
} ImGuiViewport;