src/imgui_impl_dx11_bindings.rs

/* automatically generated by rust-bindgen 0.66.1 */

pub type ImVec2 = ImVec2_t;
pub type ImVec4 = ImVec4_t;
pub type ImVector_ImDrawCmd = ImVector_ImDrawCmd_t;
pub type ImVector_ImDrawIdx = ImVector_ImDrawIdx_t;
pub type ImVector_ImDrawChannel = ImVector_ImDrawChannel_t;
pub type ImVector_ImDrawVert = ImVector_ImDrawVert_t;
pub type ImVector_ImVec4 = ImVector_ImVec4_t;
pub type ImVector_ImTextureID = ImVector_ImTextureID_t;
pub type ImVector_ImVec2 = ImVector_ImVec2_t;
pub type ImVector_ImDrawListPtr = ImVector_ImDrawListPtr_t;
pub type ImDrawCmdHeader = ImDrawCmdHeader_t;
pub type ImDrawChannel = ImDrawChannel_t;
pub type ImDrawCmd = ImDrawCmd_t;
pub type ImDrawData = ImDrawData_t;
pub type ImDrawList = ImDrawList_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ImDrawListSharedData_t {
    _unused: [u8; 0],
}
pub type ImDrawListSharedData = ImDrawListSharedData_t;
pub type ImDrawListSplitter = ImDrawListSplitter_t;
pub type ImDrawVert = ImDrawVert_t;
pub type ImGuiViewport = ImGuiViewport_t;
pub type ImDrawListFlags = ::std::os::raw::c_int;
pub type ImGuiViewportFlags = ::std::os::raw::c_int;
pub type ImTextureID = *mut ::std::os::raw::c_void;
pub type ImDrawIdx = ::std::os::raw::c_ushort;
pub type ImGuiID = ::std::os::raw::c_uint;
pub type ImU32 = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ImVec2_t {
    pub x: f32,
    pub y: f32,
}
#[test]
fn bindgen_test_layout_ImVec2_t() {
    const UNINIT: ::std::mem::MaybeUninit<ImVec2_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ImVec2_t>(),
        8usize,
        concat!("Size of: ", stringify!(ImVec2_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ImVec2_t>(),
        4usize,
        concat!("Alignment of ", stringify!(ImVec2_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVec2_t),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVec2_t),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ImVec4_t {
    pub x: f32,
    pub y: f32,
    pub z: f32,
    pub w: f32,
}
#[test]
fn bindgen_test_layout_ImVec4_t() {
    const UNINIT: ::std::mem::MaybeUninit<ImVec4_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ImVec4_t>(),
        16usize,
        concat!("Size of: ", stringify!(ImVec4_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ImVec4_t>(),
        4usize,
        concat!("Alignment of ", stringify!(ImVec4_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVec4_t),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVec4_t),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVec4_t),
            "::",
            stringify!(z)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).w) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVec4_t),
            "::",
            stringify!(w)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ImVector_ImDrawCmd_t {
    pub Size: ::std::os::raw::c_int,
    pub Capacity: ::std::os::raw::c_int,
    pub Data: *mut ImDrawCmd,
}
#[test]
fn bindgen_test_layout_ImVector_ImDrawCmd_t() {
    const UNINIT: ::std::mem::MaybeUninit<ImVector_ImDrawCmd_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ImVector_ImDrawCmd_t>(),
        16usize,
        concat!("Size of: ", stringify!(ImVector_ImDrawCmd_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ImVector_ImDrawCmd_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ImVector_ImDrawCmd_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Size) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImDrawCmd_t),
            "::",
            stringify!(Size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Capacity) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImDrawCmd_t),
            "::",
            stringify!(Capacity)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Data) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImDrawCmd_t),
            "::",
            stringify!(Data)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ImVector_ImDrawIdx_t {
    pub Size: ::std::os::raw::c_int,
    pub Capacity: ::std::os::raw::c_int,
    pub Data: *mut ImDrawIdx,
}
#[test]
fn bindgen_test_layout_ImVector_ImDrawIdx_t() {
    const UNINIT: ::std::mem::MaybeUninit<ImVector_ImDrawIdx_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ImVector_ImDrawIdx_t>(),
        16usize,
        concat!("Size of: ", stringify!(ImVector_ImDrawIdx_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ImVector_ImDrawIdx_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ImVector_ImDrawIdx_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Size) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImDrawIdx_t),
            "::",
            stringify!(Size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Capacity) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImDrawIdx_t),
            "::",
            stringify!(Capacity)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Data) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImDrawIdx_t),
            "::",
            stringify!(Data)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ImVector_ImDrawChannel_t {
    pub Size: ::std::os::raw::c_int,
    pub Capacity: ::std::os::raw::c_int,
    pub Data: *mut ImDrawChannel,
}
#[test]
fn bindgen_test_layout_ImVector_ImDrawChannel_t() {
    const UNINIT: ::std::mem::MaybeUninit<ImVector_ImDrawChannel_t> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ImVector_ImDrawChannel_t>(),
        16usize,
        concat!("Size of: ", stringify!(ImVector_ImDrawChannel_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ImVector_ImDrawChannel_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ImVector_ImDrawChannel_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Size) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImDrawChannel_t),
            "::",
            stringify!(Size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Capacity) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImDrawChannel_t),
            "::",
            stringify!(Capacity)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Data) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImDrawChannel_t),
            "::",
            stringify!(Data)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ImVector_ImDrawVert_t {
    pub Size: ::std::os::raw::c_int,
    pub Capacity: ::std::os::raw::c_int,
    pub Data: *mut ImDrawVert,
}
#[test]
fn bindgen_test_layout_ImVector_ImDrawVert_t() {
    const UNINIT: ::std::mem::MaybeUninit<ImVector_ImDrawVert_t> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ImVector_ImDrawVert_t>(),
        16usize,
        concat!("Size of: ", stringify!(ImVector_ImDrawVert_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ImVector_ImDrawVert_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ImVector_ImDrawVert_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Size) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImDrawVert_t),
            "::",
            stringify!(Size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Capacity) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImDrawVert_t),
            "::",
            stringify!(Capacity)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Data) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImDrawVert_t),
            "::",
            stringify!(Data)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ImVector_ImVec4_t {
    pub Size: ::std::os::raw::c_int,
    pub Capacity: ::std::os::raw::c_int,
    pub Data: *mut ImVec4,
}
#[test]
fn bindgen_test_layout_ImVector_ImVec4_t() {
    const UNINIT: ::std::mem::MaybeUninit<ImVector_ImVec4_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ImVector_ImVec4_t>(),
        16usize,
        concat!("Size of: ", stringify!(ImVector_ImVec4_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ImVector_ImVec4_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ImVector_ImVec4_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Size) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImVec4_t),
            "::",
            stringify!(Size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Capacity) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImVec4_t),
            "::",
            stringify!(Capacity)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Data) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ImVector_ImVec4_t),
            "::",
            stringify!(Data)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ImVector_ImTextureID_t {
    pub Size: ::std::os::raw::c_int,
    pub Capacity: ::std::os::raw::c_int,
    pub Data: *mut ImTextureID,
}
